# mytools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
example/: estimate_filament_signal.ipynb  tngcube_pairstack_result.npz
mytools/: bins.py  data.py  halo.py  plot.py  stack.py
scripts/: convolve.py  find_fuzzy_par.py  pair_stack.py  stack_pair.py
slurm/: find_fuzzy_par.sh  pair_stack.sh  stack_pair.sh
src/mytools/: __init__.py  bins.py  calculation.py  constant.py  data.py  estimate.py  estimate_err.py  estimate_fixwidth.py  estimate_with_error.py  halo.py  halo_new.py  halo_opt.py  plot.py  plot_custom.py  stack.py  utils.py
test/: test_calculation.ipynb  test_convolve.ipynb  test_data.ipynb  test_plot.ipynb
