[metadata]
name = mytools
version = 0.1.0
author = dyliu
author_email= dyliu0312@gmail.com
description = A collection of python tools used in my HI filament stacking simulation work, arxiv:2411.03988. 
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
include_package_data = True
install_requires =
    h5py
    numpy
    scipy
    astropy
    matplotlib

[project.urls]
Source = https://github.com/dyliu0312/mytools